Added content to the Information subsection

--- a/er/er.html
+++ b/er/er.html
@@ -1791,12 +1791,26 @@ Role = Editor and/or Contributor
 <p>The OGC API Hackathon 2019 was hosted by the Geovation Hub in London, United Kingdom, from June 20th to 21st, 2019. The hackathon was sponsored by the European Space Agency (ESA) and the Ordnance Survey. The <strong>goal</strong> of the hackathon was to advance the development of OGC API specifications.</p>
 </div>
 <div class="paragraph">
-<p>The objectives of the hackathon were set out as to:
-* develop, deploy and test services/clients that support OGC APIs
-* suggest improvements for a common core
-* define rules/guidance that can be documented
-* validate work that has been completed to date
-* contribute to the GitHub repositories</p>
+<p>The objectives of the hackathon were set out as to:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>develop, deploy and test services/clients that support OGC APIs</p>
+</li>
+<li>
+<p>suggest improvements for a common core</p>
+</li>
+<li>
+<p>define rules/guidance that can be documented</p>
+</li>
+<li>
+<p>validate work that has been completed to date</p>
+</li>
+<li>
+<p>contribute to the GitHub repositories</p>
+</li>
+</ul>
 </div>
 <div class="sect2">
 <h3 id="_overview_of_the_challenge"><a class="anchor" href="#_overview_of_the_challenge"></a>6.1. Overview of the Challenge</h3>
@@ -3120,7 +3134,7 @@ Services on rows and Clients on columns
 <div class="sect3">
 <h4 id="_organization"><a class="anchor" href="#_organization"></a>10.1.2. Organization</h4>
 <div class="paragraph">
-<p>By the event date, 76 individuals had been registered to participate in-person and 35 participants had been registered to participate remotely. A questionnaire sent out just before the hackathon to collect information about which OGC API specifications the participants would focus on received 27 responses, with the spread of interest as shown in <a href="#img_interests">Figure 5</a>.</p>
+<p>By the event date, 76 individuals had been registered to participate in-person and 35 participants had been registered to participate remotely. A questionnaire sent out just before the hackathon to collect information about which OGC API specifications the participants would focus on received 27 responses. The spread of responses to the hackathon is shown in <a href="#img_interests">Figure 5</a>.</p>
 </div>
 <div id="img_interests" class="imageblock text-center">
 <div class="content">
@@ -3174,23 +3188,66 @@ Services on rows and Clients on columns
 </div>
 <div class="sect3">
 <h4 id="_information"><a class="anchor" href="#_information"></a>10.1.4. Information</h4>
+<div class="sect4">
+<h5 id="_communication"><a class="anchor" href="#_communication"></a>Communication</h5>
 <div class="paragraph">
-<p>TBA</p>
+<p>A key aspect of executing a hackathon is the communication within and between the participating teams. A number of communication tools were used within the OGC API Hackathon to facilitate communication.</p>
 </div>
-<div id="img_commits" class="imageblock text-center">
-<div class="content">
-<img src="images/commits.png" alt="commits" width="800">
+<div class="ulist">
+<ul>
+<li>
+<p>OGC Portal: Used for event planning.</p>
+</li>
+<li>
+<p>Gitter: Used for communication relating to technical information, due to its close integration with Github.</p>
+</li>
+<li>
+<p>Github: Used for logging issues and sharing documents (including the engineering report) across teams.</p>
+</li>
+<li>
+<p>OGC Mailing list: Used for sharing administrative information with all participants ahead of the hackathon.</p>
+</li>
+<li>
+<p>Gotomeeting: Used for the pre-event webinar and for teleconferencing with remote participants during the hackathon.</p>
+</li>
+</ul>
 </div>
-<div class="title">Figure 6. The total number of commits made to Github repositories for Processes, Map Tiles, Common and Coverages</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Note</div>
+</td>
+<td class="content">
+The Ordnance Survey provided the Microsoft Teams platform for supporting participants that had requested access to the Ordnance Survey Cloud.
+</td>
+</tr>
+</table>
 </div>
+</div>
+<div class="sect4">
+<h5 id="_knowledge_capture"><a class="anchor" href="#_knowledge_capture"></a>Knowledge Capture</h5>
 <div class="paragraph">
-<p>TBA</p>
+<p>The various teams involved in the hackathon used the Github repositories of their relevant OGC API specifications to log issues that were identified during discussions. Note that the hackathon took place at the end of the week, and thus some of the participants were only able to log issues at the beginning of the week after the hackathon. <a href="#img_issues">Figure 6</a> presents a graph of the total number of issues logged in Github repositories on the lead up to the hackathon event, during the event and the week after the event. The effect of the hackathon is clearly visible from the 'spike' in the number of issues logged during the two days of the hackathon event (i.e. June 20th &amp; 21st).</p>
 </div>
 <div id="img_issues" class="imageblock text-center">
 <div class="content">
 <img src="images/issues.png" alt="issues" width="800">
 </div>
-<div class="title">Figure 7. The total number of issues logged in Github repositories for Processes, Map Tiles, Common and Coverages</div>
+<div class="title">Figure 6. The total number of issues logged in Github repositories for Processes, Map Tiles, Common and Coverages</div>
+</div>
+<div class="paragraph">
+<p>Changes to the OGC API specifications were made on the lead up to the hackathon, and during the event. <a href="#img_commits">Figure 7</a> presents the total number of commits in Github repositories for OGC APIs on the lead up to the hackathon event, during the event and the week after the event. The commits represent more than 4600 additions and 3200 deletions to the draft API specifications.</p>
+</div>
+<div id="img_commits" class="imageblock text-center">
+<div class="content">
+<img src="images/commits.png" alt="commits" width="800">
+</div>
+<div class="title">Figure 7. The total number of commits made to Github repositories for Processes, Map Tiles, Common and Coverages</div>
+</div>
+<div class="paragraph">
+<p>It should be noted that although the hackathon resulted in additions and deletions to the draft API specifications, the outputs of the hackathon are subject to vetting and approval processes of the relevant OGC Standards Working Groups. Therefore there is always the possibility that the Standards Working Groups may reject all of the outputs of the hackathon. To an extent, such an outcome is mitigated by the participation of several members of the Standards Working Group in the hackathon. Further, appointing the editors of the OGC API specifications as the Team Leads of the hackathon appeared to improve the likelihood of acceptance of changes made during the hackathon.</p>
+</div>
 </div>
 </div>
 </div>
