Added questionnaires to Appendix B

--- a/er/er.html
+++ b/er/er.html
@@ -1394,6 +1394,13 @@ To obtain additional rights of use, visit <a href="http://www.opengeospatial.org
 <li><a href="#OGCAPIHackathonAgenda">Appendix B: Invitation to Participate</a>
 <ul class="sectlevel2">
 <li><a href="#_invitation_announcement">B.1. Invitation Announcement</a></li>
+<li><a href="#_questionnaires">B.2. Questionnaires</a></li>
+<li><a href="#_travel_support_request">B.3. Travel Support Request</a>
+<ul class="sectlevel3">
+<li><a href="#_infrastructure">B.3.1. Infrastructure</a></li>
+<li><a href="#_additional_information">B.3.2. Additional Information</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#RevisionHistory">Appendix C: Revision History</a></li>
@@ -3334,19 +3341,10 @@ Services on rows and Clients on columns
 <li>
 <p>Gotomeeting: Used for the pre-event webinar and for teleconferencing with remote participants during the hackathon.</p>
 </li>
+<li>
+<p>Microsoft Teams: Used by the Ordnance Survey for supporting participants that had requested access to the Ordnance Survey Cloud.</p>
+</li>
 </ul>
-</div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<div class="title">Note</div>
-</td>
-<td class="content">
-The Ordnance Survey provided the Microsoft Teams platform for supporting participants that had requested access to the Ordnance Survey Cloud.
-</td>
-</tr>
-</table>
 </div>
 </div>
 <div class="sect4">
@@ -6300,11 +6298,21 @@ paths:
 <div class="paragraph">
 <p>The event will be instrumental to the evolution of the OWS standards to a modern API based approach, setting the course for open geospatial standards for the next decade. The hackathon will be organized around:</p>
 </div>
+<div class="ulist">
+<ul>
+<li>
+<p>Coverages</p>
+</li>
+<li>
+<p>Map Tiles</p>
+</li>
+<li>
+<p>Processing</p>
+</li>
+</ul>
+</div>
 <div class="paragraph">
-<p>Coverages
-Map Tiles
-Processing
-Use of the OGC API for features, aka WFS3, is anticipated during many of the hackathon activities.</p>
+<p>Use of the OGC API for features, aka WFS3, is anticipated during many of the hackathon activities.</p>
 </div>
 <div class="paragraph">
 <p>The outputs of the hackathon will inform the development of the OGC API - Common standard [2], the OGC API - Features standard [3], OGC API – Processes s standard [4], the OGC API – Coverages standard [5] and the OGC API – Map Tiles standard [6].</p>
@@ -6361,7 +6369,7 @@ Use of the OGC API for features, aka WFS3, is anticipated during many of the hac
 <p>We&#8217;re looking forward to seeing you at the Hackathon.</p>
 </div>
 <div class="paragraph">
-<p>References:</p>
+<p>Appendix B - References:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -6390,6 +6398,300 @@ Use of the OGC API for features, aka WFS3, is anticipated during many of the hac
 <p>OGC API Hackathon 2019 Cross Team Github repository, <a href="https://github.com/opengeospatial/OGC-API-Hackathon-2019" class="bare">https://github.com/opengeospatial/OGC-API-Hackathon-2019</a></p>
 </li>
 </ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_questionnaires"><a class="anchor" href="#_questionnaires"></a>B.2. Questionnaires</h3>
+<div class="paragraph">
+<p>This section presents the questionnaires that were presented to hackathon participants to facilitate organization of the event.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_travel_support_request"><a class="anchor" href="#_travel_support_request"></a>B.3. Travel Support Request</h3>
+<div class="paragraph">
+<p>Software Development Experience</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Coding is not my day to day job, but I often hack on things to solve key problems.</p>
+</li>
+<li>
+<p>&#10063; I am fluent in a variety of program languages and have shipped production systems with thousands of users.</p>
+</li>
+<li>
+<p>&#10063; I have several years of professional software development experience and write code almost every day.</p>
+</li>
+<li>
+<p>&#10063; I am comfortable with code, and can copy and paste pieces or script things together.</p>
+</li>
+<li>
+<p>&#10063; Other</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Experience	with WFS, WCS, WMTS or WPS Specifications</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; No experience with any of the web services listed (totally ok! We want you too!)</p>
+</li>
+<li>
+<p>&#10063; Have used web services based on one or more of the standards listed above</p>
+</li>
+<li>
+<p>&#10063; Have created a client implementation of one or more of the web service standards listed above</p>
+</li>
+<li>
+<p>&#10063; Have created a server implementation of one or more of the web service standards listed above</p>
+</li>
+<li>
+<p>&#10063; Have implemented web services and API&#8217;s that are not based on OGC standards</p>
+</li>
+<li>
+<p>&#10063; Other</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>What is your LinkedIn profile link</p>
+</div>
+<div class="paragraph">
+<p>What is your GitHub profile link</p>
+</div>
+<div class="paragraph">
+<p>Are you a Chair of one or more of the following OGC Standards Working Groups: WPS SWG, WCS SWG, WMS SWG, WFS SWG ?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Yes</p>
+</li>
+<li>
+<p>&#10063; No</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Are you an editor of one or more of the following specifications: OGC API - Coverages, OGC API - Features, OGC API - Processes, OGC API - Map Tiles?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Yes</p>
+</li>
+<li>
+<p>&#10063; No</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Have you implemented one or more of the following draft specifications: OGC API - Coverages, OGC API - Features, OGC API - Processes, OGC API - Map Tiles?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Yes</p>
+</li>
+<li>
+<p>&#10063; No</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Do you agree to the terms in the OGC Privacy Policy at <a href="https://www.opengeospatial.org/ogc/policies/privacy" class="bare">https://www.opengeospatial.org/ogc/policies/privacy</a> ?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Yes</p>
+</li>
+<li>
+<p>&#10063; No</p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_infrastructure"><a class="anchor" href="#_infrastructure"></a>B.3.1. Infrastructure</h4>
+<div class="paragraph">
+<p>Which challenge are you proposing to work on?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; OGC API - Processes</p>
+</li>
+<li>
+<p>&#10063; OGC API - Common</p>
+</li>
+<li>
+<p>&#10063; OGC API - Map Tiles</p>
+</li>
+<li>
+<p>&#10063; OGC API - Coverages</p>
+</li>
+<li>
+<p>&#10063; Other</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>How much data (in Gigabytes) are you bringing to the Hackathon?</p>
+</div>
+<div class="paragraph">
+<p>Does the data you are bringing to the Hackathon contain any personal or personally identifiable information that would fall under GDPR?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Yes</p>
+</li>
+<li>
+<p>&#10063; No</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Are you bringing any commercially sensitive data to the Hackathon?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Yes</p>
+</li>
+<li>
+<p>&#10063; No</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Which base image will your containers be built on? Include operating system or distribution if known.</p>
+</div>
+<div class="paragraph">
+<p>What is the minimum required RAM for running and testing your software?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; 1 GB</p>
+</li>
+<li>
+<p>&#10063; 2 GB</p>
+</li>
+<li>
+<p>&#10063; 4 GB</p>
+</li>
+<li>
+<p>&#10063; More than 4GB (Please justify this requirement in the Notes section)</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>What is the minimum number of CPUs required to run your software?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; 1</p>
+</li>
+<li>
+<p>&#10063; 2</p>
+</li>
+<li>
+<p>&#10063; More than 2 (Please justify this requirement in the Notes section)</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>What is the minimum storage (in Gigabytes) you will require for running and testing your software?</p>
+</div>
+<div class="paragraph">
+<p>Please rate your team&#8217;s Microsoft Azure knowledge</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; None</p>
+</li>
+<li>
+<p>&#10063; Other Cloud Knowledge eg AWS</p>
+</li>
+<li>
+<p>&#10063; Azure Developer</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>NOTES: anything else you think we should know about your requirements for the environment your application and data require for the Hackathon?</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_additional_information"><a class="anchor" href="#_additional_information"></a>B.3.2. Additional Information</h4>
+<div class="paragraph">
+<p>What is your Github Handle?</p>
+</div>
+<div class="paragraph">
+<p>Dietary restrictions</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; None</p>
+</li>
+<li>
+<p>&#10063; Vegetarian</p>
+</li>
+<li>
+<p>&#10063; Vegan</p>
+</li>
+<li>
+<p>&#10063; Kosher</p>
+</li>
+<li>
+<p>&#10063; Gluten-free</p>
+</li>
+<li>
+<p>&#10063; Other</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Which team will you work mostly with during the Hackathon?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; OGC API - Processes</p>
+</li>
+<li>
+<p>&#10063; OGC API - Common</p>
+</li>
+<li>
+<p>&#10063; OGC API - Map Tiles</p>
+</li>
+<li>
+<p>&#10063; OGC API - Coverages</p>
+</li>
+<li>
+<p>&#10063; Other</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Do you agree to the terms in the OGC Privacy Policy at <a href="https://www.opengeospatial.org/ogc/policies/privacy" class="bare">https://www.opengeospatial.org/ogc/policies/privacy</a> ?</p>
+</div>
+<div class="ulist checklist">
+<ul class="checklist">
+<li>
+<p>&#10063; Yes</p>
+</li>
+<li>
+<p>&#10063; No</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
